defined password characters parameters

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -24,6 +24,27 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+        <div class="inputs">
+          <label for="uppercase" data-js-selector="checkbox">
+              <input type="checkbox" id="uppercase" />
+              Uppercase
+          </label>
+          <label for="numbers" data-js-selector="checkbox">
+              <input type="checkbox" id="numbers" />
+              Numbers
+          </label>
+          <label for="symbols" data-js-selector="checkbox">
+              <input type="checkbox" id="symbols" />
+              Symbols
+          </label>
+          <div class="input-group">
+              Password Length
+
+              <div class="slider-container">
+                  <input type="range" min="8" max="128" value="5" class="slider" data-js-selector="slider" />
+                  <span class="value">5</span>
+              </div>
+          </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
