updated read me file and css styling

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Password Generator</title>
+    <title>Password Generator 🔑</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -41,7 +41,7 @@
               Password Length
 
               <div class="slider-container">
-                  <input type="range" min="8" max="128" value="5" class="slider" data-js-selector="slider" />
+                  <input type="range" min="8" max="25" value="5" class="slider" data-js-selector="slider" />
                   <span class="value">5</span>
               </div>
           </div>
