updated index.html, updated styling, updated passwordOptions function prompts

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -24,7 +24,7 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
-        <div class="inputs">
+        <!-- <div class="inputs">
           <label for="uppercase" data-js-selector="checkbox">
               <input type="checkbox" id="uppercase" />
               Uppercase
@@ -38,13 +38,11 @@
               Symbols
           </label>
           <div class="input-group">
-              Password Length
-
+              Password Length: 
               <div class="slider-container">
                   <input type="range" min="8" max="128" value="5" class="slider" data-js-selector="slider" />
-                  <span class="value">5</span>
-              </div>
-          </div>
+                  <span class="value">8</span>
+              </div> -->
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
