updated generate password function again; updated application screenshots in the readme file

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="wrapper">
+    <center><div class="wrapper">
       <header>
         <h1>Password Generator</h1>
       </header>
@@ -48,6 +48,7 @@
         </div>
       </div>
     </div>
+  </center>
     <script src="script.js"></script>
   </body>
 </html>
